Apply suggestions from code review
Co-authored-by: Guruprasad Bhat <gbhat@cloudbees.com>